@@ -1,7 +1,10 @@
 # ChangeLog for net-irc/kmyirc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.1 2002/09/16 07:58:25 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.2 2002/10/11 08:02:25 shermann Exp $
 
+*kmyirc-0.2.7 (11 Oct 2002)
+
+  11 Oct 2002; Stephan Hermann <sh@sourcecode.de>: KMyIRC 0.2.7 release. Please read the ChangeLog on http://kmyirc.sf.net/changelog.php 
 *kmyirc-0.2.6 (16 Sep 2002)
 
   16 Sep 2002; Stephan Hermann <sh@sourcecode.de>: Second release of Gentoo ebuild script.
